<resources>
    <string name="app_name">Kuesioner Kepuasan Tidur</string>
    <string name="sleep_quality_questionnaire">Kuesioner Kualitas Tidur (PSQI)</string>
    <string name="berlin_questionnaire">Kuesioner Berlin</string>
    <string name="choose_questionnaire">Pilih jenis kuesioner</string>
    <string name="questionnaire_type">Jenis kuesioner</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="male">Laki - laki</string>
    <string name="female">Perempuan</string>
    <string name="name">Nama *</string>
    <string name="gender">Jenis kelamin</string>
    <string name="age">Umur</string>
    <string name="birth_place">Tempat lahir</string>
    <string name="dob">Tanggal lahir</string>
    <string name="address">Alamat</string>
    <string name="body_weight">Berat badan (kg) *</string>
    <string name="body_height">Tinggi badan (cm) *</string>
    <string name="neck_circumference">Lingkar leher (cm)</string>
    <string name="registration_form">Form Registerasi</string>
    <string name="registration">Register</string>
    <string name="done">Selesai</string>
    <string name="information">Informasi</string>
    <string name="fill_column_message">Mohon lengkapi kolom bertanda bintang !</string>
    <string name="ok">ok</string>
    <string name="osa_risk">Resiko OSA</string>
    <string name="name_x">Nama : %1$s</string>
    <string name="weight_x_kg">Berat badan : %1$s kg</string>
    <string name="height_x_m">Tinggi badan : %1$s m</string>
    <string name="bmi_x">BMI : %.2f</string>
    <string name="high">Tinggi</string>
    <string name="low">Rendah</string>
    <string name="date_format">dd-MMMM-yyyy</string>
    <string name="complete_all_questionnaire">Mohon selesaikan semua kuesioner !</string>
    <string name="category_1">Kategori 1</string>
    <string name="category_2">Kategori 2</string>
    <string name="category_3">Kategori 3</string>
    <string name="answer">Jawab</string>
    <string name="question_answer">Jawaban</string>
    <string name="close">close</string>
    <string name="number_x">Nomor %1$s.</string>
    <string name="HH_mm_a">HH:mm a</string>
    <string name="skor">Skor</string>
    <string name="good_sleep_quality">Kualitas tidur baik</string>
    <string name="bad_sleep_quality">Kualitas tidur buruk</string>
</resources>