<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_item_margin"
            android:paddingVertical="@dimen/view_item_margin"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toStartOf="@id/ivClose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="0dp" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close"
            android:contentDescription="@string/close" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/view_item_margin"
        android:layout_marginTop="@dimen/view_item_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        tools:text="@tools:sample/lorem[9]" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/view_item_margin"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_answer"
            android:inputType="textPersonName"
            android:textColor="@android:color/widget_edittext_dark" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginHorizontal="@dimen/view_item_margin"
        android:layout_marginTop="20dp"
        android:enabled="true"
        android:text="@string/answer" />

</LinearLayout>